--- a/css/style.css
+++ b/css/style.css
@@ -34,15 +34,15 @@ h1 {
   font-size: 1.25em;
 }
 
-.chicken .title {
+.Mohammad .title {
   background-color: #ff9999;
 }
 
-.beef .title {
+.Khaled .title {
   background-color: #99ccff;
 }
 
-.sushi .title {
+.Sawalqa .title {
   background-color: #99ffcc;
 }
 
